--- a/dep/CMakeLists.txt
+++ b/dep/CMakeLists.txt
@@ -20,6 +20,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
+add_subdirectory(angelscript)
 add_subdirectory(asio)
 add_subdirectory(mysql)
 add_subdirectory(openssl)
