--- a/dep/TracyProfiler/CMakeLists.txt
+++ b/dep/TracyProfiler/CMakeLists.txt
@@ -44,6 +44,6 @@ target_sources(${PROJECT_NAME} INTERFACE
 if (ENABLE_TRACY_PROFILER)
     target_compile_definitions(${PROJECT_NAME} INTERFACE
         TRACY_ENABLE
-        TRACY_ON_DEMAND
+        TRACY_NO_EXIT
     )
 endif()
