Add ShaderCooker library project to be used in both ShaderCookerStandalone executable and the engine

--- a/dep/CMakeLists.txt
+++ b/dep/CMakeLists.txt
@@ -63,3 +63,7 @@ endif()
 if(NOT TARGET stormlib)
     add_subdirectory(stormlib)
 endif()
+
+if(NOT TARGET shadercooker)
+    add_subdirectory(dxcompiler)
+endif()
