Add MemoryTracker for tracking RAM usage

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
     type_safe::type_safe
 	Entt::Entt
     imgui::imgui
+    npas4::npas4
 )
 
 add_compile_definitions(NOMINMAX _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS)
